[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/decks/used_ship.gd" type="Script" id=1]
[ext_resource path="res://scenes/buttonfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/cards/ship_card.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/card.png" type="Texture" id=5]
[ext_resource path="res://images/buy.png" type="Texture" id=6]
[ext_resource path="res://images/ship.png" type="Texture" id=8]
[ext_resource path="res://images/cargo-bg.png" type="Texture" id=11]

[node name="UsedShip" type="TextureRect"]
unique_name_in_owner = true
margin_right = 96.0
margin_bottom = 128.0
texture = ExtResource( 5 )
script = ExtResource( 1 )

[node name="Bg" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.0392157 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 11 )

[node name="DeckType" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 7
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 7.0
margin_top = 4.0
margin_right = 92.0
margin_bottom = 124.0

[node name="ShipCard" parent="MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 85.0
margin_bottom = 97.0
size_flags_vertical = 3

[node name="Bottom" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 85.0
margin_bottom = 120.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Bottom"]
margin_right = 85.0
margin_bottom = 19.0
size_flags_horizontal = 3

[node name="Buy" type="Button" parent="MarginContainer/VBoxContainer/Bottom/MarginContainer"]
unique_name_in_owner = true
margin_right = 38.0
margin_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "1K"
icon = ExtResource( 6 )

[connection signal="helped" from="MarginContainer/VBoxContainer/ShipCard" to="." method="_on_help_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Bottom/MarginContainer/Buy" to="." method="_on_buy_pressed"]
